New Duplicate checker BRGKA

--- a/doc/source/algorithms/cmaes.ipynb
+++ b/doc/source/algorithms/cmaes.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {
     "code": "algorithms/usage_cmaes.py"
    },
@@ -53,7 +53,7 @@
       "Best solution found: \n",
       "X = [0.49999994 0.5        0.50000001 0.50000003 0.49999996 0.49999994\n",
       " 0.5        0.49999999 0.49999995 0.50000004]\n",
-      "F = [1.36882403e-14]\n"
+      "F = [1.36882511e-14]\n"
      ]
     }
    ],
@@ -83,26 +83,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "======================================================================\n",
-      "n_gen | n_eval  | favg         | fopt        \n",
-      "======================================================================\n",
-      "1     | 10      | 1.0793104854 | 0.6932812364\n",
-      "2     | 20      | 0.9924516976 | 0.5106359626\n",
-      "3     | 30      | 1.1184789576 | 0.6571688692\n",
-      "4     | 40      | 1.0674769175 | 0.6547624663\n",
-      "5     | 50      | 1.0269486218 | 0.6338133774\n",
-      "6     | 60      | 0.8981479319 | 0.4995880478\n",
-      "7     | 70      | 1.1327358326 | 0.5653450234\n",
-      "8     | 80      | 0.9193072614 | 0.6157630702\n",
-      "9     | 90      | 0.8735589949 | 0.4520709684\n",
-      "10    | 100     | 0.8809163155 | 0.4353635768\n",
+      "==============================================================================\n",
+      "n_gen |  n_eval |     fopt     |    sigma     | min std  | max std  |   axis  \n",
+      "==============================================================================\n",
+      "    1 |      10 |  0.693281236 |  0.500000000 |  0.50000 |  0.50002 |  1.00005\n",
+      "    2 |      20 |  0.510635963 |  0.467010358 |  0.44671 |  0.47745 |  1.19477\n",
+      "    3 |      30 |  0.510635963 |  0.436791171 |  0.40501 |  0.44470 |  1.24024\n",
+      "    4 |      40 |  0.510635963 |  0.422510052 |  0.38513 |  0.43316 |  1.28711\n",
+      "    5 |      50 |  0.510635963 |  0.414590098 |  0.37047 |  0.42855 |  1.35280\n",
+      "    6 |      60 |  0.499588048 |  0.399593307 |  0.35758 |  0.42099 |  1.42064\n",
+      "    7 |      70 |  0.499588048 |  0.377241108 |  0.32669 |  0.41240 |  1.57503\n",
+      "    8 |      80 |  0.499588048 |  0.360917895 |  0.30394 |  0.39292 |  1.59267\n",
+      "    9 |      90 |  0.452070968 |  0.352635143 |  0.29372 |  0.37350 |  1.64823\n",
+      "   10 |     100 |  0.435363577 |  0.361760636 |  0.29683 |  0.38860 |  1.75806\n",
       "Best solution found: \n",
       "X = [0.52575679 0.65999627 0.65540969 0.48303056 0.96943187 0.78243048\n",
       " 0.35731446 0.42159602 0.26088296 0.52906313]\n",
@@ -122,25 +122,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "======================================================================\n",
-      "n_gen | n_eval  | favg         | fopt        \n",
-      "======================================================================\n",
-      "1     | 10      | 1.0793104854 | 0.6932812364\n",
-      "2     | 20      | 0.9924516976 | 0.5106359626\n",
-      "3     | 30      | 1.1184789576 | 0.6571688692\n",
-      "4     | 40      | 1.0674769175 | 0.6547624663\n",
-      "5     | 50      | 1.0269486218 | 0.6338133774\n",
+      "==============================================================================\n",
+      "n_gen |  n_eval |     fopt     |    sigma     | min std  | max std  |   axis  \n",
+      "==============================================================================\n",
+      "    1 |      10 |  0.693281236 |  0.500000000 |  0.50000 |  0.50002 |  1.00005\n",
+      "    2 |      20 |  0.510635963 |  0.467010358 |  0.44671 |  0.47745 |  1.19477\n",
+      "    3 |      30 |  0.510635963 |  0.436791171 |  0.40501 |  0.44470 |  1.24024\n",
+      "    4 |      40 |  0.510635963 |  0.422510052 |  0.38513 |  0.43316 |  1.28711\n",
+      "    5 |      50 |  0.510635963 |  0.414590098 |  0.37047 |  0.42855 |  1.35280\n",
       "Best solution found: \n",
-      "X = [0.71160367 0.86107845 0.33881616 0.28646686 0.20213603 0.73801189\n",
-      " 0.56225826 0.45487665 0.01654471 0.45451201]\n",
-      "F = [0.63381338]\n"
+      "X = [0.00518307 0.70907123 0.53830206 0.64531015 0.16284682 0.36370915\n",
+      " 0.4825207  0.35503139 0.59110102 0.69398715]\n",
+      "F = [0.51063596]\n"
      ]
     }
    ],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -172,14 +172,16 @@
      "output_type": "stream",
      "text": [
       "Best solution found: \n",
-      "X = [0.50002389 0.4999944  0.49999425 0.50004497 0.49998743 0.49997262\n",
-      " 0.49998491 0.50000543 0.50001591 0.4999836 ]\n",
-      "F = [4.34454723e-09]\n"
+      "X = [0.50000245 0.49999845 0.49999497 0.50000176 0.50001416 0.50001004\n",
+      " 0.49999414 0.50000475 0.49999928 0.49999112]\n",
+      "F = [4.74485512e-10]\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
+    "from pymoo.util.normalization import denormalize\n",
+    "\n",
     "np.random.seed(1)\n",
     "\n",
     "# define an intitial point for the search\n",
@@ -247,7 +249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
