--- a/doc/source/misc/index.ipynb
+++ b/doc/source/misc/index.ipynb
@@ -38,6 +38,7 @@
     "   constraint_handling.ipynb\n",
     "   decomposition.ipynb\n",
     "   callback.ipynb\n",
+    "   display.ipynb\n",
     "   results.ipynb\n",
     "   \n",
     "   "
