--- a/doc/source/misc/results.ipynb
+++ b/doc/source/misc/results.ipynb
@@ -73,9 +73,9 @@
     {
      "data": {
       "text/plain": [
-       "(array([0.64014154, 0.48263145, 0.49898381, 0.56769556, 0.47794749,\n",
-       "        0.67105917, 0.49758836, 0.47342642, 0.48633132, 0.51630811]),\n",
-       " array([0.05543735]),\n",
+       "(array([0.41919891, 0.47902208, 0.36089478, 0.5115848 , 0.45634212,\n",
+       "        0.54653289, 0.37113741, 0.40521917, 0.36873299, 0.52631462]),\n",
+       " array([0.07403714]),\n",
        " None,\n",
        " array([0.]))"
       ]
@@ -97,12 +97,12 @@
     {
      "data": {
       "text/plain": [
-       "(<pymoo.algorithms.so_genetic_algorithm.GA at 0x11e673e90>,\n",
-       " Population([<pymoo.model.individual.Individual object at 0x11e7c2050>,\n",
-       "             <pymoo.model.individual.Individual object at 0x11e7c23d0>,\n",
-       "             <pymoo.model.individual.Individual object at 0x11e67da10>,\n",
-       "             <pymoo.model.individual.Individual object at 0x11e7c2210>,\n",
-       "             <pymoo.model.individual.Individual object at 0x11e7c2350>],\n",
+       "(<pymoo.algorithms.so_genetic_algorithm.GA at 0x11f794e10>,\n",
+       " Population([<pymoo.model.individual.Individual object at 0x11f7a2550>,\n",
+       "             <pymoo.model.individual.Individual object at 0x11f7a2650>,\n",
+       "             <pymoo.model.individual.Individual object at 0x11f7a2590>,\n",
+       "             <pymoo.model.individual.Individual object at 0x11f7a2810>,\n",
+       "             <pymoo.model.individual.Individual object at 0x11f7a2990>],\n",
        "            dtype=object))"
       ]
      },
@@ -132,21 +132,21 @@
     {
      "data": {
       "text/plain": [
-       "(array([[0.64014154, 0.48263145, 0.49898381, 0.56769556, 0.47794749,\n",
-       "         0.67105917, 0.49758836, 0.47342642, 0.48633132, 0.51630811],\n",
-       "        [0.64014154, 0.47726981, 0.53101528, 0.56769556, 0.47312045,\n",
-       "         0.67105917, 0.49758836, 0.46866063, 0.48633132, 0.51630811],\n",
-       "        [0.64014154, 0.42882383, 0.54200361, 0.56769556, 0.47312045,\n",
-       "         0.67105917, 0.49758836, 0.46866063, 0.48633132, 0.51630811],\n",
-       "        [0.64014154, 0.48263145, 0.58416635, 0.56769556, 0.47819705,\n",
-       "         0.67105917, 0.49758836, 0.46866063, 0.48633132, 0.51630811],\n",
-       "        [0.64014154, 0.48263145, 0.58416635, 0.56769556, 0.47788436,\n",
-       "         0.67105917, 0.49758836, 0.4685275 , 0.48633132, 0.51630811]]),\n",
-       " array([[0.05543735],\n",
-       "        [0.05712546],\n",
-       "        [0.0624772 ],\n",
-       "        [0.06278535],\n",
-       "        [0.06280745]]))"
+       "(array([[0.41919891, 0.47902208, 0.36089478, 0.5115848 , 0.45634212,\n",
+       "         0.54653289, 0.37113741, 0.40521917, 0.36873299, 0.52631462],\n",
+       "        [0.41919891, 0.51282797, 0.36089478, 0.51388238, 0.44440297,\n",
+       "         0.54653289, 0.37113741, 0.45001996, 0.33100837, 0.51291793],\n",
+       "        [0.41919891, 0.50077623, 0.36089478, 0.51328358, 0.61967624,\n",
+       "         0.54653289, 0.37113741, 0.40521917, 0.37235219, 0.53021809],\n",
+       "        [0.41919891, 0.51282797, 0.36089478, 0.51388238, 0.64152746,\n",
+       "         0.54653289, 0.37113741, 0.40521917, 0.37502487, 0.51449625],\n",
+       "        [0.41919891, 0.50077623, 0.36089478, 0.51328358, 0.42256495,\n",
+       "         0.54653289, 0.37113741, 0.40521917, 0.32833565, 0.52863977]]),\n",
+       " array([[0.07403714],\n",
+       "        [0.07932131],\n",
+       "        [0.08533991],\n",
+       "        [0.08984959],\n",
+       "        [0.09009549]]))"
       ]
      },
      "execution_count": 4,
@@ -182,14 +182,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "======================================================================\n",
-      "n_gen | n_eval  | cv (min/avg)                | favg  | fopt \n",
-      "======================================================================\n",
-      "1     | 5       | 1.350271E+02 / 5.475700E+02 | -     | -    \n",
-      "2     | 10      | 1.350271E+02 / 3.607562E+02 | -     | -    \n",
-      "3     | 15      | 1.350271E+02 / 2.259881E+02 | -     | -    \n",
-      "4     | 20      | 1.350271E+02 / 1.565811E+02 | -     | -    \n",
-      "5     | 25      | 3.310368E+01 / 1.096916E+02 | -     | -    \n"
+      "===========================================================================\n",
+      "n_gen |  n_eval |   cv (min)   |   cv (avg)   |     favg     |     fopt    \n",
+      "===========================================================================\n",
+      "    1 |       5 |  1.35027E+02 |  5.47570E+02 |            - |            -\n",
+      "    2 |      10 |  1.35027E+02 |  3.60756E+02 |            - |            -\n",
+      "    3 |      15 |  1.35027E+02 |  2.25988E+02 |            - |            -\n",
+      "    4 |      20 |  1.35027E+02 |  1.44347E+02 |            - |            -\n",
+      "    5 |      25 |  1.35009E+02 |  1.35709E+02 |            - |            -\n"
      ]
     }
    ],
@@ -239,14 +239,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "======================================================================\n",
-      "n_gen | n_eval  | cv (min/avg)                | favg  | fopt \n",
-      "======================================================================\n",
-      "1     | 5       | 1.350271E+02 / 5.475700E+02 | -     | -    \n",
-      "2     | 10      | 1.350271E+02 / 3.607562E+02 | -     | -    \n",
-      "3     | 15      | 1.350271E+02 / 2.259881E+02 | -     | -    \n",
-      "4     | 20      | 1.350271E+02 / 1.565811E+02 | -     | -    \n",
-      "5     | 25      | 3.310368E+01 / 1.096916E+02 | -     | -    \n"
+      "===========================================================================\n",
+      "n_gen |  n_eval |   cv (min)   |   cv (avg)   |     favg     |     fopt    \n",
+      "===========================================================================\n",
+      "    1 |       5 |  1.35027E+02 |  5.47570E+02 |            - |            -\n",
+      "    2 |      10 |  1.35027E+02 |  3.60756E+02 |            - |            -\n",
+      "    3 |      15 |  1.35027E+02 |  2.25988E+02 |            - |            -\n",
+      "    4 |      20 |  1.35027E+02 |  1.44347E+02 |            - |            -\n",
+      "    5 |      25 |  1.35009E+02 |  1.35709E+02 |            - |            -\n"
      ]
     }
    ],
@@ -268,13 +268,13 @@
     {
      "data": {
       "text/plain": [
-       "(array([ 0.79663211,  0.90276502,  0.74816565,  0.43310131,  0.78930018,\n",
-       "         0.0717483 ,  0.44789353,  0.9028263 ,  0.10182177,  0.23918845,\n",
+       "(array([ 0.75014431,  0.99342958,  0.74816565,  0.28044399,  0.78927933,\n",
+       "         0.10322601,  0.44789353,  0.9085955 ,  0.29361415, 28.77753386,\n",
        "        13.00285721,  1.93669579,  0.67883553]),\n",
-       " array([-14.75252652]),\n",
-       " array([ 6.64083991, -4.73452024,  8.24141434, -6.13386842,  5.78073708,\n",
-       "        -4.04862945, -1.41631436, 12.41146709,  0.02922141]),\n",
-       " array([33.10367983]))"
+       " array([-44.01771073]),\n",
+       " array([35.26753887, 23.71084958,  8.42274348, 22.77637934,  5.05542053,\n",
+       "        -4.04862945, 27.42736655, 12.34851167, -0.17410937]),\n",
+       " array([135.00881002]))"
       ]
      },
      "execution_count": 8,
@@ -326,15 +326,14 @@
     {
      "data": {
       "text/plain": [
-       "array([[6.59972937e-04, 3.46313095e+00],\n",
-       "       [6.70781056e-02, 2.87596946e+00],\n",
-       "       [4.42856882e-05, 3.95330114e+00],\n",
-       "       [1.31990677e-02, 3.11337727e+00],\n",
-       "       [2.50016243e-04, 3.56762952e+00],\n",
-       "       [1.53940423e-03, 3.41822087e+00],\n",
-       "       [6.26189621e-04, 3.56293085e+00],\n",
-       "       [1.81927730e-03, 3.13899781e+00],\n",
-       "       [1.78852173e-04, 3.84385603e+00]])"
+       "array([[9.20203865e-01, 2.78196295e+00],\n",
+       "       [8.44885722e-01, 3.00931642e+00],\n",
+       "       [3.22198205e-04, 3.29352972e+00],\n",
+       "       [2.31557361e-05, 3.58881094e+00],\n",
+       "       [5.05496673e-04, 3.28432654e+00],\n",
+       "       [1.46697798e-02, 3.14288874e+00],\n",
+       "       [2.61436263e-01, 3.11387760e+00],\n",
+       "       [1.37675126e-02, 3.18163525e+00]])"
       ]
      },
      "execution_count": 10,
