--- a/doc/source/tutorial/custom.ipynb
+++ b/doc/source/tutorial/custom.ipynb
@@ -239,28 +239,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# the input is the current population and a list of other populations.\n",
-    "# the function returns if an individual in pop is equal to any other individual \n",
-    "# in any other population.\n",
-    "def func_is_duplicate(pop, *other, **kwargs):\n",
-    "    if len(other) == 0:\n",
-    "        return np.full(len(pop), False)\n",
+    "from pymoo.model.duplicate import ElementwiseDuplicateElimination\n",
     "\n",
-    "    # value to finally return\n",
-    "    is_duplicate = np.full(len(pop), False)\n",
+    "class MyDuplicateElimination(ElementwiseDuplicateElimination):\n",
     "\n",
-    "    H = set()\n",
-    "    for e in other:\n",
-    "        for val in e:\n",
-    "            H.add(val.X[0])\n",
-    "\n",
-    "    for i, (val, ) in enumerate(pop.get(\"X\")):\n",
-    "        if val in H:\n",
-    "            is_duplicate[i] = True\n",
-    "        H.add(val)\n",
-    "\n",
-    "    return is_duplicate\n",
-    "\n"
+    "    def compare(self, a, b):\n",
+    "        return a.X[0] == b.X[0]"
    ]
   },
   {
@@ -289,7 +273,7 @@
     "                  sampling=MySampling(),\n",
     "                  crossover=MyCrossover(),\n",
     "                  mutation=MyMutation(),\n",
-    "                  eliminate_duplicates=func_is_duplicate)\n",
+    "                  eliminate_duplicates=MyDuplicateElimination())\n",
     "\n",
     "res = minimize(MyProblem(),\n",
     "               algorithm,\n",
@@ -335,15 +319,15 @@
      "output_type": "stream",
      "text": [
       "[['aaaaaaaaaa' 10]\n",
-      " ['aaabaaaaaa' 9]\n",
-      " ['aaabaabaaa' 8]\n",
-      " ['bbaaaaaaab' 7]\n",
-      " ['aabbaababa' 6]\n",
-      " ['babbbaabaa' 5]\n",
-      " ['babbbaabab' 4]\n",
-      " ['bbbbbabbaa' 3]\n",
-      " ['ababbbbbbb' 2]\n",
-      " ['bbbbabbbbb' 1]\n",
+      " ['aaaaaaaaab' 9]\n",
+      " ['baaaabaaaa' 8]\n",
+      " ['baabbaaaaa' 7]\n",
+      " ['aabbbaaaab' 6]\n",
+      " ['bbaabbabaa' 5]\n",
+      " ['aabbbbbaab' 4]\n",
+      " ['babbbbbaab' 3]\n",
+      " ['baabbbbbbb' 2]\n",
+      " ['bbbbbbabbb' 1]\n",
       " ['bbbbbbbbbb' 0]]\n"
      ]
     }
