--- a/doc/source/tutorial/repair.ipynb
+++ b/doc/source/tutorial/repair.ipynb
@@ -45,19 +45,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "======================================================================\n",
-      "n_gen | n_eval  | cv (min/avg)                | favg  | fopt \n",
-      "======================================================================\n",
-      "1     | 200     | 2.360000E+02 / 5.185100E+02 | -     | -    \n",
-      "2     | 400     | 8.400000E+01 / 3.840100E+02 | -     | -    \n",
-      "3     | 600     | 3.900000E+01 / 2.932100E+02 | -     | -    \n",
-      "4     | 800     | 3.900000E+01 / 2.193950E+02 | -     | -    \n",
-      "5     | 1000    | 0.0000000000 / 1.475900E+02 | -247.1666666667 | -349.0000000000\n",
-      "6     | 1200    | 0.0000000000 / 8.672500E+01 | -272.7894736842 | -484.0000000000\n",
-      "7     | 1400    | 0.0000000000 / 4.091500E+01 | -269.9361702128 | -484.0000000000\n",
-      "8     | 1600    | 0.0000000000 / 1.184500E+01 | -287.2038834951 | -517.0000000000\n",
-      "9     | 1800    | 0.0000000000 / 0.0050000000 | -285.8693467337 | -522.0000000000\n",
-      "10    | 2000    | 0.0000000000 / 0.0000000000 | -360.6150000000 | -677.0000000000\n"
+      "===========================================================================\n",
+      "n_gen |  n_eval |   cv (min)   |   cv (avg)   |     favg     |     fopt    \n",
+      "===========================================================================\n",
+      "    1 |     200 |  2.36000E+02 |  5.18510E+02 |            - |            -\n",
+      "    2 |     400 |  8.40000E+01 |  3.83695E+02 |            - |            -\n",
+      "    3 |     600 |  8.40000E+01 |  2.87015E+02 |            - |            -\n",
+      "    4 |     800 |  8.000000000 |  2.10900E+02 |            - |            -\n",
+      "    5 |    1000 |  0.00000E+00 |  1.45015E+02 | -2.48000E+02 |         -264\n",
+      "    6 |    1200 |  0.00000E+00 |  8.50150E+01 | -2.64267E+02 |         -419\n",
+      "    7 |    1400 |  0.00000E+00 |  3.86550E+01 | -2.84909E+02 |         -686\n",
+      "    8 |    1600 |  0.00000E+00 |  9.655000000 | -2.92924E+02 |         -686\n",
+      "    9 |    1800 |  0.00000E+00 |  0.070000000 | -2.99677E+02 |         -686\n",
+      "   10 |    2000 |  0.00000E+00 |  0.00000E+00 | -3.73755E+02 |         -686\n"
      ]
     }
    ],
@@ -145,25 +145,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "======================================================================\n",
-      "n_gen | n_eval  | cv (min/avg)                | favg         | fopt        \n",
-      "======================================================================\n",
-      "1     | 200     | 0.0000000000 / 0.0000000000 | -127.7100000000 | -465.0000000000\n",
-      "2     | 400     | 0.0000000000 / 0.0000000000 | -214.0100000000 | -465.0000000000\n",
-      "3     | 600     | 0.0000000000 / 0.0000000000 | -279.7350000000 | -525.0000000000\n"
+      "===========================================================================\n",
+      "n_gen |  n_eval |   cv (min)   |   cv (avg)   |     favg     |     fopt    \n",
+      "===========================================================================\n",
+      "    1 |     200 |  0.00000E+00 |  0.00000E+00 | -1.34325E+02 |         -387\n",
+      "    2 |     400 |  0.00000E+00 |  0.00000E+00 | -2.23300E+02 |         -387\n",
+      "    3 |     600 |  0.00000E+00 |  0.00000E+00 | -2.80105E+02 |         -412\n",
+      "    4 |     800 |  0.00000E+00 |  0.00000E+00 | -3.30060E+02 |         -542\n",
+      "    5 |    1000 |  0.00000E+00 |  0.00000E+00 | -3.76335E+02 |         -544\n",
+      "    6 |    1200 |  0.00000E+00 |  0.00000E+00 | -4.16160E+02 |         -579\n",
+      "    7 |    1400 |  0.00000E+00 |  0.00000E+00 | -4.50245E+02 |         -610\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4     | 800     | 0.0000000000 / 0.0000000000 | -323.3800000000 | -525.0000000000\n",
-      "5     | 1000    | 0.0000000000 / 0.0000000000 | -367.3500000000 | -552.0000000000\n",
-      "6     | 1200    | 0.0000000000 / 0.0000000000 | -413.2600000000 | -581.0000000000\n",
-      "7     | 1400    | 0.0000000000 / 0.0000000000 | -457.9950000000 | -604.0000000000\n",
-      "8     | 1600    | 0.0000000000 / 0.0000000000 | -490.6850000000 | -657.0000000000\n",
-      "9     | 1800    | 0.0000000000 / 0.0000000000 | -519.4600000000 | -670.0000000000\n",
-      "10    | 2000    | 0.0000000000 / 0.0000000000 | -541.8750000000 | -670.0000000000\n"
+      "    8 |    1600 |  0.00000E+00 |  0.00000E+00 | -4.85835E+02 |         -648\n",
+      "    9 |    1800 |  0.00000E+00 |  0.00000E+00 | -5.19985E+02 |         -648\n",
+      "   10 |    2000 |  0.00000E+00 |  0.00000E+00 | -5.43220E+02 |         -670\n"
      ]
     }
    ],
