--- a/doc/source/tutorial/subset_selection.ipynb
+++ b/doc/source/tutorial/subset_selection.ipynb
@@ -156,101 +156,101 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "======================================================================\n",
-      "n_gen | n_eval  | cv (min/avg)                | favg         | fopt        \n",
-      "======================================================================\n",
-      "1     | 100     | 0.0000000000 / 0.0000000000 | 4.439400E+02 | 2.580000E+02\n",
-      "2     | 200     | 0.0000000000 / 0.0000000000 | 3.537300E+02 | 2.050000E+02\n",
-      "3     | 300     | 0.0000000000 / 0.0000000000 | 2.967100E+02 | 1.580000E+02\n",
-      "4     | 400     | 0.0000000000 / 0.0000000000 | 2.460400E+02 | 1.400000E+02\n",
-      "5     | 500     | 0.0000000000 / 0.0000000000 | 2.138900E+02 | 1.260000E+02\n",
-      "6     | 600     | 0.0000000000 / 0.0000000000 | 1.869100E+02 | 1.170000E+02\n",
-      "7     | 700     | 0.0000000000 / 0.0000000000 | 1.616500E+02 | 9.700000E+01\n",
-      "8     | 800     | 0.0000000000 / 0.0000000000 | 1.426500E+02 | 9.700000E+01\n",
-      "9     | 900     | 0.0000000000 / 0.0000000000 | 1.300700E+02 | 6.700000E+01\n",
-      "10    | 1000    | 0.0000000000 / 0.0000000000 | 1.195400E+02 | 6.700000E+01\n"
+      "===========================================================================\n",
+      "n_gen |  n_eval |   cv (min)   |   cv (avg)   |     favg     |     fopt    \n",
+      "===========================================================================\n",
+      "    1 |     100 |  0.00000E+00 |  0.00000E+00 |  4.43940E+02 |          258\n",
+      "    2 |     200 |  0.00000E+00 |  0.00000E+00 |  3.53730E+02 |          205\n",
+      "    3 |     300 |  0.00000E+00 |  0.00000E+00 |  2.96710E+02 |          158\n",
+      "    4 |     400 |  0.00000E+00 |  0.00000E+00 |  2.46040E+02 |          140\n",
+      "    5 |     500 |  0.00000E+00 |  0.00000E+00 |  2.13890E+02 |          126\n",
+      "    6 |     600 |  0.00000E+00 |  0.00000E+00 |  1.86910E+02 |          117\n",
+      "    7 |     700 |  0.00000E+00 |  0.00000E+00 |  1.61650E+02 |           97\n",
+      "    8 |     800 |  0.00000E+00 |  0.00000E+00 |  1.42650E+02 |           97\n",
+      "    9 |     900 |  0.00000E+00 |  0.00000E+00 |  1.30070E+02 |           67\n",
+      "   10 |    1000 |  0.00000E+00 |  0.00000E+00 |  1.19540E+02 |           67\n",
+      "   11 |    1100 |  0.00000E+00 |  0.00000E+00 |  1.10810E+02 |           57\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11    | 1100    | 0.0000000000 / 0.0000000000 | 1.108100E+02 | 5.700000E+01\n",
-      "12    | 1200    | 0.0000000000 / 0.0000000000 | 1.021800E+02 | 5.700000E+01\n",
-      "13    | 1300    | 0.0000000000 / 0.0000000000 | 9.592000E+01 | 5.700000E+01\n",
-      "14    | 1400    | 0.0000000000 / 0.0000000000 | 8.898000E+01 | 5.500000E+01\n",
-      "15    | 1500    | 0.0000000000 / 0.0000000000 | 8.368000E+01 | 4.900000E+01\n",
-      "16    | 1600    | 0.0000000000 / 0.0000000000 | 7.953000E+01 | 4.900000E+01\n",
-      "17    | 1700    | 0.0000000000 / 0.0000000000 | 7.565000E+01 | 4.900000E+01\n",
-      "18    | 1800    | 0.0000000000 / 0.0000000000 | 7.155000E+01 | 4.900000E+01\n",
-      "19    | 1900    | 0.0000000000 / 0.0000000000 | 6.941000E+01 | 4.600000E+01\n",
-      "20    | 2000    | 0.0000000000 / 0.0000000000 | 6.790000E+01 | 4.600000E+01\n"
+      "   12 |    1200 |  0.00000E+00 |  0.00000E+00 |  1.02180E+02 |           57\n",
+      "   13 |    1300 |  0.00000E+00 |  0.00000E+00 |  9.59200E+01 |           57\n",
+      "   14 |    1400 |  0.00000E+00 |  0.00000E+00 |  8.89800E+01 |           55\n",
+      "   15 |    1500 |  0.00000E+00 |  0.00000E+00 |  8.36800E+01 |           49\n",
+      "   16 |    1600 |  0.00000E+00 |  0.00000E+00 |  7.95300E+01 |           49\n",
+      "   17 |    1700 |  0.00000E+00 |  0.00000E+00 |  7.56500E+01 |           49\n",
+      "   18 |    1800 |  0.00000E+00 |  0.00000E+00 |  7.15500E+01 |           49\n",
+      "   19 |    1900 |  0.00000E+00 |  0.00000E+00 |  6.94100E+01 |           46\n",
+      "   20 |    2000 |  0.00000E+00 |  0.00000E+00 |  6.79000E+01 |           46\n",
+      "   21 |    2100 |  0.00000E+00 |  0.00000E+00 |  6.53800E+01 |           46\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "21    | 2100    | 0.0000000000 / 0.0000000000 | 6.538000E+01 | 4.600000E+01\n",
-      "22    | 2200    | 0.0000000000 / 0.0000000000 | 6.350000E+01 | 4.600000E+01\n",
-      "23    | 2300    | 0.0000000000 / 0.0000000000 | 6.222000E+01 | 4.500000E+01\n",
-      "24    | 2400    | 0.0000000000 / 0.0000000000 | 6.060000E+01 | 4.500000E+01\n",
-      "25    | 2500    | 0.0000000000 / 0.0000000000 | 5.918000E+01 | 4.400000E+01\n",
-      "26    | 2600    | 0.0000000000 / 0.0000000000 | 5.788000E+01 | 4.200000E+01\n",
-      "27    | 2700    | 0.0000000000 / 0.0000000000 | 5.678000E+01 | 4.200000E+01\n",
-      "28    | 2800    | 0.0000000000 / 0.0000000000 | 5.548000E+01 | 4.200000E+01\n",
-      "29    | 2900    | 0.0000000000 / 0.0000000000 | 5.451000E+01 | 4.200000E+01\n",
-      "30    | 3000    | 0.0000000000 / 0.0000000000 | 5.331000E+01 | 4.200000E+01\n"
+      "   22 |    2200 |  0.00000E+00 |  0.00000E+00 |  6.35000E+01 |           46\n",
+      "   23 |    2300 |  0.00000E+00 |  0.00000E+00 |  6.22200E+01 |           45\n",
+      "   24 |    2400 |  0.00000E+00 |  0.00000E+00 |  6.06000E+01 |           45\n",
+      "   25 |    2500 |  0.00000E+00 |  0.00000E+00 |  5.91800E+01 |           44\n",
+      "   26 |    2600 |  0.00000E+00 |  0.00000E+00 |  5.78800E+01 |           42\n",
+      "   27 |    2700 |  0.00000E+00 |  0.00000E+00 |  5.67800E+01 |           42\n",
+      "   28 |    2800 |  0.00000E+00 |  0.00000E+00 |  5.54800E+01 |           42\n",
+      "   29 |    2900 |  0.00000E+00 |  0.00000E+00 |  5.45100E+01 |           42\n",
+      "   30 |    3000 |  0.00000E+00 |  0.00000E+00 |  5.35000E+01 |           42\n",
+      "   31 |    3100 |  0.00000E+00 |  0.00000E+00 |  5.30700E+01 |           42\n",
+      "   32 |    3200 |  0.00000E+00 |  0.00000E+00 |  5.20500E+01 |           39\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "31    | 3100    | 0.0000000000 / 0.0000000000 | 5.220000E+01 | 4.200000E+01\n",
-      "32    | 3200    | 0.0000000000 / 0.0000000000 | 5.158000E+01 | 4.200000E+01\n",
-      "33    | 3300    | 0.0000000000 / 0.0000000000 | 5.080000E+01 | 4.200000E+01\n",
-      "34    | 3400    | 0.0000000000 / 0.0000000000 | 5.014000E+01 | 3.900000E+01\n",
-      "35    | 3500    | 0.0000000000 / 0.0000000000 | 4.958000E+01 | 3.900000E+01\n",
-      "36    | 3600    | 0.0000000000 / 0.0000000000 | 4.916000E+01 | 3.900000E+01\n",
-      "37    | 3700    | 0.0000000000 / 0.0000000000 | 4.869000E+01 | 3.900000E+01\n",
-      "38    | 3800    | 0.0000000000 / 0.0000000000 | 4.846000E+01 | 3.800000E+01\n",
-      "39    | 3900    | 0.0000000000 / 0.0000000000 | 4.819000E+01 | 3.800000E+01\n",
-      "40    | 4000    | 0.0000000000 / 0.0000000000 | 4.789000E+01 | 3.800000E+01\n"
+      "   33 |    3300 |  0.00000E+00 |  0.00000E+00 |  5.14400E+01 |           39\n",
+      "   34 |    3400 |  0.00000E+00 |  0.00000E+00 |  5.10500E+01 |           39\n",
+      "   35 |    3500 |  0.00000E+00 |  0.00000E+00 |  5.05100E+01 |           38\n",
+      "   36 |    3600 |  0.00000E+00 |  0.00000E+00 |  4.98300E+01 |           38\n",
+      "   37 |    3700 |  0.00000E+00 |  0.00000E+00 |  4.91400E+01 |           38\n",
+      "   38 |    3800 |  0.00000E+00 |  0.00000E+00 |  4.84800E+01 |           38\n",
+      "   39 |    3900 |  0.00000E+00 |  0.00000E+00 |  4.80100E+01 |           38\n",
+      "   40 |    4000 |  0.00000E+00 |  0.00000E+00 |  4.72000E+01 |           38\n",
+      "   41 |    4100 |  0.00000E+00 |  0.00000E+00 |  4.68400E+01 |           38\n",
+      "   42 |    4200 |  0.00000E+00 |  0.00000E+00 |  4.64900E+01 |           38\n",
+      "   43 |    4300 |  0.00000E+00 |  0.00000E+00 |  4.63200E+01 |           38\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "41    | 4100    | 0.0000000000 / 0.0000000000 | 4.728000E+01 | 3.800000E+01\n",
-      "42    | 4200    | 0.0000000000 / 0.0000000000 | 4.708000E+01 | 3.800000E+01\n",
-      "43    | 4300    | 0.0000000000 / 0.0000000000 | 4.677000E+01 | 3.800000E+01\n",
-      "44    | 4400    | 0.0000000000 / 0.0000000000 | 4.640000E+01 | 3.800000E+01\n",
-      "45    | 4500    | 0.0000000000 / 0.0000000000 | 4.610000E+01 | 3.700000E+01\n",
-      "46    | 4600    | 0.0000000000 / 0.0000000000 | 4.578000E+01 | 3.700000E+01\n",
-      "47    | 4700    | 0.0000000000 / 0.0000000000 | 4.565000E+01 | 3.700000E+01\n",
-      "48    | 4800    | 0.0000000000 / 0.0000000000 | 4.554000E+01 | 3.700000E+01\n",
-      "49    | 4900    | 0.0000000000 / 0.0000000000 | 4.536000E+01 | 3.700000E+01\n",
-      "50    | 5000    | 0.0000000000 / 0.0000000000 | 4.531000E+01 | 3.700000E+01\n"
+      "   44 |    4400 |  0.00000E+00 |  0.00000E+00 |  4.58200E+01 |           38\n",
+      "   45 |    4500 |  0.00000E+00 |  0.00000E+00 |  4.55100E+01 |           38\n",
+      "   46 |    4600 |  0.00000E+00 |  0.00000E+00 |  4.54500E+01 |           38\n",
+      "   47 |    4700 |  0.00000E+00 |  0.00000E+00 |  4.52100E+01 |           38\n",
+      "   48 |    4800 |  0.00000E+00 |  0.00000E+00 |  4.46100E+01 |           38\n",
+      "   49 |    4900 |  0.00000E+00 |  0.00000E+00 |  4.43200E+01 |           38\n",
+      "   50 |    5000 |  0.00000E+00 |  0.00000E+00 |  4.41100E+01 |           38\n",
+      "   51 |    5100 |  0.00000E+00 |  0.00000E+00 |  4.38200E+01 |           38\n",
+      "   52 |    5200 |  0.00000E+00 |  0.00000E+00 |  4.35700E+01 |           37\n",
+      "   53 |    5300 |  0.00000E+00 |  0.00000E+00 |  4.34500E+01 |           37\n",
+      "   54 |    5400 |  0.00000E+00 |  0.00000E+00 |  4.32600E+01 |           37\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "51    | 5100    | 0.0000000000 / 0.0000000000 | 4.509000E+01 | 3.700000E+01\n",
-      "52    | 5200    | 0.0000000000 / 0.0000000000 | 4.480000E+01 | 3.700000E+01\n",
-      "53    | 5300    | 0.0000000000 / 0.0000000000 | 4.456000E+01 | 3.700000E+01\n",
-      "54    | 5400    | 0.0000000000 / 0.0000000000 | 4.444000E+01 | 3.700000E+01\n",
-      "55    | 5500    | 0.0000000000 / 0.0000000000 | 4.431000E+01 | 3.700000E+01\n",
-      "56    | 5600    | 0.0000000000 / 0.0000000000 | 4.431000E+01 | 3.700000E+01\n",
-      "57    | 5700    | 0.0000000000 / 0.0000000000 | 4.424000E+01 | 3.700000E+01\n",
-      "58    | 5800    | 0.0000000000 / 0.0000000000 | 4.411000E+01 | 3.700000E+01\n",
-      "59    | 5900    | 0.0000000000 / 0.0000000000 | 4.402000E+01 | 3.700000E+01\n",
-      "60    | 6000    | 0.0000000000 / 0.0000000000 | 4.364000E+01 | 3.600000E+01\n",
-      "Function value: 36\n",
-      "Subset: [ 5  9 12 31 36 37 47 52 68 99]\n"
+      "   55 |    5500 |  0.00000E+00 |  0.00000E+00 |  4.31300E+01 |           37\n",
+      "   56 |    5600 |  0.00000E+00 |  0.00000E+00 |  4.29400E+01 |           37\n",
+      "   57 |    5700 |  0.00000E+00 |  0.00000E+00 |  4.29200E+01 |           37\n",
+      "   58 |    5800 |  0.00000E+00 |  0.00000E+00 |  4.26800E+01 |           37\n",
+      "   59 |    5900 |  0.00000E+00 |  0.00000E+00 |  4.26200E+01 |           37\n",
+      "   60 |    6000 |  0.00000E+00 |  0.00000E+00 |  4.25700E+01 |           37\n",
+      "Function value: 37\n",
+      "Subset: [ 5  9 12 36 37 40 47 52 68 99]\n"
      ]
     }
    ],
