Video Feature and BRKGA

--- a/doc/source/algorithms/cmaes.ipynb
+++ b/doc/source/algorithms/cmaes.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "code": "algorithms/usage_cmaes.py"
    },
@@ -53,7 +53,7 @@
       "Best solution found: \n",
       "X = [0.49999994 0.5        0.50000001 0.50000003 0.49999996 0.49999994\n",
       " 0.5        0.49999999 0.49999995 0.50000004]\n",
-      "F = [1.36882511e-14]\n"
+      "F = [1.36882403e-14]\n"
      ]
     }
    ],
@@ -158,6 +158,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Also, easily restarts can be used which are known to work very well on multi-modal functions. For instance, `Rastrigin` can be solved rather quickly by:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best solution found: \n",
+      "X = [ 5.20199958e-06 -4.04980429e-05]\n",
+      "F = [3.3074982e-07]\n"
+     ]
+    }
+   ],
+   "source": [
+    "problem = get_problem(\"rastrigin\")\n",
+    "\n",
+    "algorithm = CMAES(restarts=10, restart_from_best=True)\n",
+    "\n",
+    "res = minimize(problem,\n",
+    "               algorithm,\n",
+    "               ('n_evals', 2500),\n",
+    "               seed=1,\n",
+    "               verbose=False)\n",
+    "\n",
+    "print(\"Best solution found: \\nX = %s\\nF = %s\" % (res.X, res.F))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Our framework internally calls the `cma.fmin2` function. All parameters which can be used there either as a keyword argument or an option can also be passed to the `CMAES` constructor as well.\n",
     "An example with a few selected `cma.fmin2` parameters is shown below:"
    ]
@@ -249,7 +285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
