--- a/doc/source/algorithms/index.ipynb
+++ b/doc/source/algorithms/index.ipynb
@@ -28,7 +28,8 @@
     "   nsga3\n",
     "   unsga3\n",
     "   rnsga3\n",
-    "   moead\n"
+    "   moead\n",
+    "   brkga\n"
    ]
   },
   {
@@ -48,6 +49,7 @@
     "|---|---|---|\n",
     "|[Differential Evolution](differential_evolution.ipynb)|\"DE\"|\"de\"\n",
     "|[Genetic Algorithm](genetic_algorithm.ipynb)|\"GA\"|\"ga\"\n",
+    "|[BRKGA](brkga.ipynb)|\"BRKGA\"|\"brkga\"\n",
     "|[Nelder Mead](nelder_mead.ipynb)|\"NelderMead\"|\"nelder-mead\"\n",
     "|[CMAES](cmaes.ipynb)|\"CMAES\"|\"cmaes\"\n",
     "|[NSGA-II](nsga2.ipynb)|\"NSGA2\"|\"nsga2\"\n",
@@ -102,7 +104,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
