--- a/doc/source/visualization/index.ipynb
+++ b/doc/source/visualization/index.ipynb
@@ -25,7 +25,8 @@
     "   petal.ipynb\n",
     "   radar.ipynb\n",
     "   radviz.ipynb\n",
-    "   star.ipynb\n"
+    "   star.ipynb\n",
+    "   video.ipynb\n"
    ]
   },
   {
@@ -51,7 +52,8 @@
     "|[Petal Diagram](petal.ipynb)|Petal|\"petal\"|\n",
     "|[Radar](radar.ipynb)|Radar|\"radar\"|\n",
     "|[Radviz](radviz.ipynb)|Radviz|\"radviz\"|\n",
-    "|[Star Coordinates](star.ipynb)|StarCoordinate|\"star\"|\n"
+    "|[Star Coordinates](star.ipynb)|StarCoordinate|\"star\"|\n",
+    "|[Video](star.ipynb)|Video|-|\n"
    ]
   },
   {
