--- a/doc/source/misc/results.ipynb
+++ b/doc/source/misc/results.ipynb
@@ -73,9 +73,9 @@
     {
      "data": {
       "text/plain": [
-       "(array([0.41919891, 0.47902208, 0.36089478, 0.5115848 , 0.45634212,\n",
-       "        0.54653289, 0.37113741, 0.40521917, 0.36873299, 0.52631462]),\n",
-       " array([0.07403714]),\n",
+       "(array([0.38401994, 0.51096839, 0.51958345, 0.50705362, 0.64625327,\n",
+       "        0.52972181, 0.51346167, 0.57393803, 0.48975355, 0.49213286]),\n",
+       " array([0.04209328]),\n",
        " None,\n",
        " array([0.]))"
       ]
@@ -97,12 +97,12 @@
     {
      "data": {
       "text/plain": [
-       "(<pymoo.algorithms.so_genetic_algorithm.GA at 0x11f794e10>,\n",
-       " Population([<pymoo.model.individual.Individual object at 0x11f7a2550>,\n",
-       "             <pymoo.model.individual.Individual object at 0x11f7a2650>,\n",
-       "             <pymoo.model.individual.Individual object at 0x11f7a2590>,\n",
-       "             <pymoo.model.individual.Individual object at 0x11f7a2810>,\n",
-       "             <pymoo.model.individual.Individual object at 0x11f7a2990>],\n",
+       "(<pymoo.algorithms.so_genetic_algorithm.GA at 0x119b6dc90>,\n",
+       " Population([<pymoo.model.individual.Individual object at 0x119b77910>,\n",
+       "             <pymoo.model.individual.Individual object at 0x119b77dd0>,\n",
+       "             <pymoo.model.individual.Individual object at 0x119b77e10>,\n",
+       "             <pymoo.model.individual.Individual object at 0x119b77e90>,\n",
+       "             <pymoo.model.individual.Individual object at 0x119b77d90>],\n",
        "            dtype=object))"
       ]
      },
@@ -132,21 +132,21 @@
     {
      "data": {
       "text/plain": [
-       "(array([[0.41919891, 0.47902208, 0.36089478, 0.5115848 , 0.45634212,\n",
-       "         0.54653289, 0.37113741, 0.40521917, 0.36873299, 0.52631462],\n",
-       "        [0.41919891, 0.51282797, 0.36089478, 0.51388238, 0.44440297,\n",
-       "         0.54653289, 0.37113741, 0.45001996, 0.33100837, 0.51291793],\n",
-       "        [0.41919891, 0.50077623, 0.36089478, 0.51328358, 0.61967624,\n",
-       "         0.54653289, 0.37113741, 0.40521917, 0.37235219, 0.53021809],\n",
-       "        [0.41919891, 0.51282797, 0.36089478, 0.51388238, 0.64152746,\n",
-       "         0.54653289, 0.37113741, 0.40521917, 0.37502487, 0.51449625],\n",
-       "        [0.41919891, 0.50077623, 0.36089478, 0.51328358, 0.42256495,\n",
-       "         0.54653289, 0.37113741, 0.40521917, 0.32833565, 0.52863977]]),\n",
-       " array([[0.07403714],\n",
-       "        [0.07932131],\n",
-       "        [0.08533991],\n",
-       "        [0.08984959],\n",
-       "        [0.09009549]]))"
+       "(array([[0.38401994, 0.51096839, 0.51958345, 0.50705362, 0.64625327,\n",
+       "         0.52972181, 0.51346167, 0.57393803, 0.48975355, 0.49213286],\n",
+       "        [0.38401994, 0.51096839, 0.51958345, 0.50705362, 0.64625327,\n",
+       "         0.52972181, 0.51346167, 0.57393803, 0.51785226, 0.49213286],\n",
+       "        [0.38401994, 0.51099826, 0.44223106, 0.50705362, 0.64625327,\n",
+       "         0.52808581, 0.51346167, 0.57393803, 0.39462856, 0.49213286],\n",
+       "        [0.38401994, 0.51099826, 0.44223106, 0.50705362, 0.64625327,\n",
+       "         0.52864113, 0.51346167, 0.57393803, 0.39462856, 0.49213286],\n",
+       "        [0.38401994, 0.47389685, 0.44223106, 0.50705362, 0.64625327,\n",
+       "         0.52808581, 0.51346167, 0.57393803, 0.39462856, 0.49213286]]),\n",
+       " array([[0.04209328],\n",
+       "        [0.04230699],\n",
+       "        [0.05595125],\n",
+       "        [0.05598275],\n",
+       "        [0.05651167]]))"
       ]
      },
      "execution_count": 4,
@@ -186,10 +186,10 @@
       "n_gen |  n_eval |   cv (min)   |   cv (avg)   |     favg     |     fopt    \n",
       "===========================================================================\n",
       "    1 |       5 |  1.35027E+02 |  5.47570E+02 |            - |            -\n",
-      "    2 |      10 |  1.35027E+02 |  3.60756E+02 |            - |            -\n",
-      "    3 |      15 |  1.35027E+02 |  2.25988E+02 |            - |            -\n",
-      "    4 |      20 |  1.35027E+02 |  1.44347E+02 |            - |            -\n",
-      "    5 |      25 |  1.35009E+02 |  1.35709E+02 |            - |            -\n"
+      "    2 |      10 |  1.35027E+02 |  3.16525E+02 |            - |            -\n",
+      "    3 |      15 |  1.35027E+02 |  2.16131E+02 |            - |            -\n",
+      "    4 |      20 |  1.35027E+02 |  1.60240E+02 |            - |            -\n",
+      "    5 |      25 |  1.33435E+02 |  1.38575E+02 |            - |            -\n"
      ]
     }
    ],
@@ -243,10 +243,10 @@
       "n_gen |  n_eval |   cv (min)   |   cv (avg)   |     favg     |     fopt    \n",
       "===========================================================================\n",
       "    1 |       5 |  1.35027E+02 |  5.47570E+02 |            - |            -\n",
-      "    2 |      10 |  1.35027E+02 |  3.60756E+02 |            - |            -\n",
-      "    3 |      15 |  1.35027E+02 |  2.25988E+02 |            - |            -\n",
-      "    4 |      20 |  1.35027E+02 |  1.44347E+02 |            - |            -\n",
-      "    5 |      25 |  1.35009E+02 |  1.35709E+02 |            - |            -\n"
+      "    2 |      10 |  1.35027E+02 |  3.16525E+02 |            - |            -\n",
+      "    3 |      15 |  1.35027E+02 |  2.16131E+02 |            - |            -\n",
+      "    4 |      20 |  1.35027E+02 |  1.60240E+02 |            - |            -\n",
+      "    5 |      25 |  1.33435E+02 |  1.38575E+02 |            - |            -\n"
      ]
     }
    ],
@@ -268,13 +268,13 @@
     {
      "data": {
       "text/plain": [
-       "(array([ 0.75014431,  0.99342958,  0.74816565,  0.28044399,  0.78927933,\n",
-       "         0.10322601,  0.44789353,  0.9085955 ,  0.29361415, 28.77753386,\n",
-       "        13.00285721,  1.93669579,  0.67883553]),\n",
-       " array([-44.01771073]),\n",
-       " array([35.26753887, 23.71084958,  8.42274348, 22.77637934,  5.05542053,\n",
-       "        -4.04862945, 27.42736655, 12.34851167, -0.17410937]),\n",
-       " array([135.00881002]))"
+       "(array([ 0.75014431,  0.93402157,  0.45981887,  0.45896477,  0.78927933,\n",
+       "         0.10322601,  0.74930314,  0.9085955 ,  0.29361415, 28.77753386,\n",
+       "        13.00285721,  1.93669579,  0.78207866]),\n",
+       " array([-43.6144102]),\n",
+       " array([35.14872283, 23.13415601,  7.72723386, 22.77637934,  5.53068468,\n",
+       "        -1.74185514, 27.070325  , 12.04710206, -0.17410937]),\n",
+       " array([133.43460378]))"
       ]
      },
      "execution_count": 8,
@@ -326,14 +326,16 @@
     {
      "data": {
       "text/plain": [
-       "array([[9.20203865e-01, 2.78196295e+00],\n",
-       "       [8.44885722e-01, 3.00931642e+00],\n",
-       "       [3.22198205e-04, 3.29352972e+00],\n",
-       "       [2.31557361e-05, 3.58881094e+00],\n",
-       "       [5.05496673e-04, 3.28432654e+00],\n",
-       "       [1.46697798e-02, 3.14288874e+00],\n",
-       "       [2.61436263e-01, 3.11387760e+00],\n",
-       "       [1.37675126e-02, 3.18163525e+00]])"
+       "array([[4.16802606e-03, 3.23671344e+00],\n",
+       "       [9.71157804e-01, 2.38786959e+00],\n",
+       "       [1.58596486e-02, 3.20227917e+00],\n",
+       "       [2.47327329e-01, 2.57134146e+00],\n",
+       "       [2.10946801e-01, 3.00214052e+00],\n",
+       "       [2.11374949e-01, 2.96669503e+00],\n",
+       "       [1.30395200e-04, 3.90195863e+00],\n",
+       "       [4.41596137e-04, 3.52101976e+00],\n",
+       "       [2.47371097e-02, 3.06413386e+00],\n",
+       "       [1.44936500e-04, 3.77754170e+00]])"
       ]
      },
      "execution_count": 10,
