--- a/doc/source/visualization/video.ipynb
+++ b/doc/source/visualization/video.ipynb
@@ -28,6 +28,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "To enable video support you have to install `pyrecorder` by\n",
+    "\n",
+    "```\n",
+    "pip install -U pyrecorder\n",
+    "```\n",
+    "\n",
+    "Because our recording tool has some dependencies not every regular `pymoo` user would be interest in, we have decided to outsource the recording to another third-party library."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "For instance, let us record a very short video with only three frames (randomly created scatter plots):"
    ]
   },
@@ -41,17 +54,18 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "from pyrecorder.recorders.file import File\n",
+    "from pyrecorder.video import Video\n",
     "\n",
     "from pymoo.algorithms.nsga2 import NSGA2\n",
     "from pymoo.visualization.scatter import Scatter\n",
-    "from pymoo.visualization.video import Video\n",
     "\n",
-    "vid = Video(\"example.mp4\")\n",
+    "vid = Video(File(\"example.mp4\"))\n",
     "\n",
     "for k in range(10):\n",
     "    X = np.random.random((100, 2))\n",
     "    Scatter(title=str(k)).add(X).do()\n",
-    "    vid.snap(duration=1)\n",
+    "    vid.record()\n",
     "\n",
     "vid.close()"
    ]
@@ -86,18 +100,26 @@
     "               save_history=True,\n",
     "               verbose=False)\n",
     "\n",
+    "# use the video writer as a resource\n",
+    "with Video(File(\"ga.mp4\")) as vid:\n",
     "\n",
-    "def my_plot(algorithm):\n",
-    "    Scatter(title=(\"Gen %s\" % algorithm.n_gen)).add(algorithm.pop.get(\"F\")).do()\n",
+    "    # for each algorithm object in the history\n",
+    "    for entry in ret.history:\n",
+    "        sc = Scatter(title=(\"Gen %s\" % entry.n_gen))\n",
+    "        sc.add(entry.pop.get(\"F\"))\n",
+    "        sc.add(entry.problem.pareto_front(), plot_type=\"line\", color=\"black\", alpha=0.7)\n",
+    "        sc.do()\n",
     "\n",
-    "Video.from_iteratable(\"ga.mp4\", ret.history, my_plot)"
+    "        # finally record the current visualization to the video\n",
+    "        vid.record()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To stream the the current algorithm state directly to the screen the callback directive can be used to initiate a video by `Video(live=True)`:"
+    "To stream the the current algorithm state directly to the screen the callback directive can be used to initiate a video by `Video(Streamer())`.\n",
+    "This will allow to stream the current status of the algorithm."
    ]
   },
   {
@@ -108,19 +130,21 @@
    },
    "outputs": [],
    "source": [
+    "from pyrecorder.recorders.streamer import Streamer\n",
+    "from pyrecorder.video import Video\n",
+    "\n",
     "from pymoo.algorithms.so_genetic_algorithm import GA\n",
     "from pymoo.factory import get_problem\n",
     "from pymoo.model.callback import Callback\n",
     "from pymoo.optimize import minimize\n",
     "from pymoo.visualization.pcp import PCP\n",
-    "from pymoo.visualization.video import Video\n",
     "\n",
     "\n",
     "class MyCallback(Callback):\n",
     "\n",
     "    def __init__(self) -> None:\n",
     "        super().__init__()\n",
-    "        self.video = Video(live=True)\n",
+    "        self.video = Video(Streamer())\n",
     "\n",
     "    def notify(self, algorithm):\n",
     "        problem = algorithm.problem\n",
@@ -134,10 +158,11 @@
     "        pcp.add(algorithm.pop.get(\"X\"), color=\"black\", alpha=0.8, linewidth=1.5)\n",
     "        if algorithm.off is not None:\n",
     "            pcp.add(algorithm.off.get(\"X\"), color=\"blue\", alpha=0.8, linewidth=0.5)\n",
+    "\n",
     "        pcp.add(algorithm.opt.get(\"X\"), color=\"red\", linewidth=4)\n",
     "        pcp.do()\n",
     "\n",
-    "        self.video.snap()\n",
+    "        self.video.record()\n",
     "\n",
     "\n",
     "problem = get_problem(\"rastrigin\", n_var=10)\n",
@@ -149,23 +174,6 @@
     "               termination=('n_gen', 50),\n",
     "               seed=1,\n",
     "               verbose=False)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### API"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {
-    "raw_mimetype": "text/restructuredtext"
-   },
-   "source": [
-    ".. autoclass:: pymoo.visualization.video.Video\n",
-    "    :noindex:"
    ]
   }
  ],
